# pcf8563-dd

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  device.yaml
.github/workflows/: rust_ci.yml
docs/: BM8563_datasheet.md  PCF8563.md
examples/: test_pcf8563_async.rs  test_pcf8563_blocking.rs
src/: bisync_helpers.rs  driver.rs  fmt.rs  lib.rs
