[package]
name = "pcf8563-dd"
version = "0.1.0"
edition = "2024"
description = "A driver for the PCF8563/BM8563 real-time clock (uses device-driver crate)"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/okhsunrog/pcf8563-dd"
keywords = ["embedded-hal-driver", "async", "no-std", "rtc", "pcf8563"]
readme = "README.md"
documentation = "https://docs.rs/pcf8563-dd"

[dependencies]
bisync = "0.3"
defmt = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
device-driver = { version = "1.0.6", default-features = false, features = ["yaml"] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
thiserror = { version = "2.0.12", default-features = false }

[features]
default = []
std = ["thiserror/std"]
log = ["dep:log"]
defmt = ["dep:defmt", "embedded-hal/defmt-03", "embedded-hal-async/defmt-03", "device-driver/defmt-03"]

[dev-dependencies]
embassy-executor = { version = "0.9.1", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-embedded-hal = "0.5.0"
embedded-hal-bus = "0.3"
static_cell = "2.1"
esp-hal = { version = "1.0.0", features = ["defmt", "esp32c3", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["defmt", "embassy", "esp32c3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32c3"] }
defmt = "1.0.1"
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }

[[example]]
name = "test_pcf8563_async"

[[example]]
name = "test_pcf8563_blocking"

[lib]
test = false
bench = false
